--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 # setting the active environment
-active_env=library1
+active_env=spartan1
 # for library1 env
 library1.database.url=jdbc:mysql://18.233.97.71:3306/library1
 library1.database.username=library1_client
