--- a/configuration.properties
+++ b/configuration.properties
@@ -29,3 +29,4 @@ library3.librarian_password=shpUFwRFrarian_password=DdZ8SHvz
 spartan1.database.url=jdbc:oracle:thin:@52.3.242.24:1521:XE
 spartan1.database.username=SP
 spartan1.database.password=SP
+spartan1.base_url=http://54.174.216.245:8000
